--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
+    "@types/node": "24.9.1",
+    "@types/react": "19.2.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
