--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sweetalert2": "^11.26.3"
   },
   "devDependencies": {
     "@types/node": "24.9.1",
